@@ -39,6 +39,9 @@ corresponds to its index, and if the branch is at a different ref,
 merge it into the index. I am still considering how to do that atomically;
 what if a push comes in while git-annex is updating its index?
 
+> Now git-annex always updates the index with the git-annex branch, which
+> is a slow, but safe way to avoid this problem. [[done]] --[[Joey]]
+
 ---
 
 ## Workaround
